# scrapelib

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  404.html  CHANGELOG  Dockerfile  LICENSE  README.md  README.rst  coverage.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  scrapelib.py  setup.py  sitemap.xml  test.py  tox.ini
.github/: dependabot.yml
.github/workflows/: docker.yml  test.yml
changelog/: index.html
docs/: Makefile  cache.rst  changelog.md  changelog.rst  conf.py  index.md  index.rst  migration.rst  reference.md  scrapelib.rst  scrapeshell.md  scrapeshell.rst
docs/examples/: example.py
reference/: index.html
scrapelib/: __init__.py  __main__.py  _types.py  cache.py
scrapelib/tests/: test_cache.py  test_scraper.py
scrapeshell/: index.html
search/: search_index.json
test_root/: robots.txt
test_root/private/: secret.html
