[tool.poetry]
name = "scrapelib"
version = "2.0.7"
description = ""
readme = "README.md"
authors = ["James Turk <dev@jamesturk.net>"]
license = "BSD-2-Clause"
repository = "https://github.com/jamesturk/scrapelib"
classifiers=[
  "Development Status :: 6 - Mature",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
scrapeshell = "scrapelib.__main__:scrapeshell"

[tool.poetry.dependencies]
python = "^3.7"
requests = {extras = ["security"], version = "^2.28.1"}

[tool.poetry.dev-dependencies]
mypy = "^0.961"
flake8 = "^3.9.0"
mock = "^4.0.3"
pytest = "^7.1.2"
pytest-cov = "^2.11.1"
coveralls = "^3.3.1"
mkdocs-material = "^8.3.9"
mkdocstrings = "0.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
