[project]
name = "scrapelib"
version = "2.4.0"
description = ""
readme = "README.md"
authors = [
    {name = "James Turk", email = "dev@jpt.sh"}
]
license = {text = "BSD-2-Clause"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests[security]>=2.28.1",
    "urllib3",
]

[project.urls]
Repository = "https://codeberg.org/jpt/scrapelib"

[project.scripts]
scrapeshell = "scrapelib.__main__:scrapeshell"

[project.optional-dependencies]
dev = [
    "mypy>=0.961",
    "flake8>=3.9.0",
    "mock>=4.0.3",
    "pytest>=7.1.2",
    "pytest-cov>=2.11.1",
    "coveralls>=3.3.1",
    "mkdocs-material>=9.2.7",
    "mkdocstrings==0.19.0",
    "types-requests>=2.28.11",
    "types-mock>=4.0.15",
    "importlib-metadata<5.0",
    "pytest-httpbin>=2.0.0",
    "Flask==2.1.0",
    "Werkzeug==2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
